# kodnerds-junior-backend-starter-task

./: README.md
submissions/: package-lock.json  package.json  tsconfig.json
submissions/Abdulhakeem-backend/: .gitignore  README.md  manage.py  pytest.ini  requirements.txt
submissions/ali-olalekan-aliyu/: README.md  index.js  package-lock.json  package.json  posts.json
submissions/data/: dataset.json
submissions/ernest-backend/: .gitignore  README.md  pyproject.toml
submissions/ernest-backend/api/: settings.py  urls.py
submissions/ernest-backend/core/: exceptions.py  models.py  serializers.py  urls.py  views.py
submissions/ernest-backend/core/management/commands/: load_articles.py
submissions/ernest-backend/core/migrations/: 0001_initial.py  0002_alter_article_options_and_more.py  0003_rename_read_more_link_article_readmore.py  0004_rename_core_articl_author__e61453_idx_core_articl_author_0f51e2_idx_and_more.py  0005_alter_article_readmore.py  0006_alter_article_options_and_more.py  0007_remove_article_core_articl_author_0f51e2_idx_and_more.py  0008_alter_article_read_more.py  0009_alter_article_read_more.py
submissions/ernest-backend/core/tests/: test_api.py  test_models.py  test_serializers.py
submissions/ernest-backend/data/: data.json
submissions/ernest-backend/ernest_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
submissions/olufemi-backend/: README.md  package-lock.json  package.json  server.js
submissions/samuel-obanla/: README.md  index.js  package-lock.json  package.json
submissions/src/: app.ts  server.ts
(+35 files in other folders)
